--- a/index.html
+++ b/index.html
@@ -662,13 +662,13 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #FAFAD2;
+            background-color: #0e0e0e;
             margin-top: 12px;
             /* ← ここで下方向にずらす */
         }
 
         .submit-button:hover {
-            background-color: #ffffff;
+            background-color: #141414;
         }
 
         @media (max-width: 768px) {
